# wallit-api

./: .gitignore  Cargo.toml
migrations/2023-09-07-113025_tables_design/: down.sql  up.sql
migrations/2023-09-07-153941_team_table_for_sharing/: down.sql  up.sql
migrations/2023-09-12-222240_non_null_id/: up.sql
migrations/2023-09-12-224215_primary_key_changes/: up.sql
migrations/2023-09-12-225034_drop_artificial_rowid/: up.sql
migrations/2023-09-12-225604_logins_add_column/: up.sql
migrations/2023-09-12-230542_history_add_userid/: up.sql
migrations/2023-09-14-092537_nullable_last_modified/: up.sql
migrations/2023-09-14-092703_uniqueness_adjust/: up.sql
migrations/2023-09-14-104057_history_adjust_uniqueness/: up.sql
migrations/2023-09-14-105403_history_drop_unique_email/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/dbaccess/: mod.rs  models.rs  users.rs
